--- a/StocksBar/Storyboards/AboutWindow.storyboard
+++ b/StocksBar/Storyboards/AboutWindow.storyboard
@@ -36,19 +36,19 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eDn-dv-jbC">
-                                <rect key="frame" x="127" y="124" width="30" height="30"/>
+                                <rect key="frame" x="129" y="127" width="27" height="27"/>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="icon_stock" id="Nz2-hE-ihT"/>
                             </imageView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FYl-zV-E9I">
-                                <rect key="frame" x="114" y="85" width="56" height="19"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="StockX" id="1xS-dv-Rsn">
+                                <rect key="frame" x="114" y="88" width="56" height="19"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="StocksBar" id="1xS-dv-Rsn">
                                     <font key="font" metaFont="systemSemibold" size="15"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="G7Y-Oi-afQ">
-                                <rect key="frame" x="133" y="61" width="19" height="14"/>
+                                <rect key="frame" x="133" y="64" width="19" height="14"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="1.6" id="fwc-EO-rwS">
                                     <font key="font" metaFont="controlContent" size="11"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -57,7 +57,7 @@
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="WS1-Y1-nFd">
                                 <rect key="frame" x="16" y="20" width="252" height="14"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Copyright © 2021 Shuifeng. All rights reserved." id="6C2-Fd-k3s">
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Copyright © 2021 今晚打老虎. All rights reserved." id="6C2-Fd-k3s">
                                     <font key="font" metaFont="controlContent" size="11"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -85,6 +85,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon_stock" width="30" height="30"/>
+        <image name="icon_stock" width="27" height="27"/>
     </resources>
 </document>
